# iganet-perftests

./: CMakeLists.txt  README.md
.github/workflows/: ci-push-pr.yml  cmake-multi-platform.yml
plugins/: BSpline.cpp
pybind11/: CMakeLists.txt  bspline.cpp  pybspline.cxx  pybspline.cxx.in  pyconfig.hpp.in  pycore.cxx
pyiganet/: CMakeLists.txt  __init__.py  pybspline.cxx  pybspline.cxx.in  pycore.cxx
pyiganet/core/: __init__.py
pyiganet/splines/: __init__.py
pyiganet/src/: CMakeLists.txt  pyblocktensor.cxx.in  pybspline.cxx  pybspline.cxx.in  pyconfig.hpp.in  pycore.cxx  pyoptions.cxx
src/: perftest_bspline_eval.cxx  perftest_bspline_eval_optimized.cxx  perftest_bsplinelib.hpp  perftest_config.hpp.in  perftest_iganet_fitting.cxx  perftest_matmul.cxx  unittest_performance.cxx
